# Comp3000_GameProject

./: .gitignore  CMakeLists.txt  README.md
Docs/: newgantt cahrt.gantt
assets/data/: item.json
assets/data/dialogue/: npcAnnaDialogue.json  npcGarretDialogue.json  npcMaxwellDialogue.json  playerDialogue.json
devlog/: 1devVideo
src/: InspectionSystem.cpp  Kitchen.cpp  SceneManager.cpp  StartScene.h  bedroom.cpp  bedroom.h  character.cpp  character.h  controls.cpp  controls.h  dialogueSystem.cpp  dialogueSystem.h  game.cpp  game.h  hallwayA.h  halwayA.cpp  inspectionSystem.h  kitchen.h  main.cpp  scene.h  sceneManager.h  startScene.cpp  storyFlags.cpp  storyFlags.h
